added to price database

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "why-is-node-running": "^2.2.2"
+  }
 }
